# quickcheck-sgx

./: .drone.yml  Cargo.toml
sgx/quickcheck-sgx-test/: Makefile
sgx/quickcheck-sgx-test/enclave/: Cargo.toml
