[package]
name = "quickcheck"
version = "0.8.5"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Automatic property based testing with shrinking."
documentation = "http://burntsushi.net/rustdoc/quickcheck/"
homepage = "https://github.com/BurntSushi/quickcheck"
repository = "https://github.com/BurntSushi/quickcheck"
readme = "README.md"
keywords = ["testing", "quickcheck", "property", "shrinking", "fuzz"]
categories = ["development-tools::testing"]
license = "Unlicense/MIT"
exclude = ["/.travis.yml", "/Makefile", "/ctags.rust", "/session.vim", "/sgx/*"]

[workspace]
#members = ["quickcheck_macros"]

[features]
default = ["regex", "use_logging", "mesalock_sgx"]
unstable = []
use_logging = ["log", "env_logger"]
regex = ["env_logger/regex"]
mesalock_sgx = ["sgx_tstd"]

[lib]
name = "quickcheck"

[dependencies]
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", optional = true }
log = { git = "https://github.com/mesalock-linux/log-sgx", optional = true }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.6.5_sgx1.1.0" }
rand_core = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.6.5_sgx1.1.0" }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
